Simple nueral network using MNIST data

--- a/mnist-neural-network.ipynb
+++ b/mnist-neural-network.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mnist = input_data.read_data_sets(\"MNIST_data/\", one_hot=True)"
+    "mnist = input_data.read_data_sets(\"data/MNIST/\", one_hot=True)"
    ]
   },
   {
@@ -38,7 +38,7 @@
    "metadata": {},
    "source": [
     "- X is the placeholder for the 28x28 image data.\n",
-    "> A `placeholder` is simply a variable that we will assign data to at a later date. It allows us to create our operations and build our computation graph, without needing the data. In TensorFlowterminology, we then feed data into the graph through these placeholders."
+    "> A `placeholder` is simply a variable that we will assign data to at a later date. It allows us to create our operations and build our computation graph, without needing the data. In TensorFlow terminology, we then feed data into the graph through these placeholders."
    ]
   },
   {
@@ -80,45 +80,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "W = tf.Variables(tf.zeros([784, 10]))\n",
-    "b = tf.Variables(tf.zeros([10]))"
+    "W = tf.Variable(tf.zeros([784, 10]))\n",
+    "b = tf.Variable(tf.zeros([10]))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Define the model\n",
+    "> The `softmax` function is a function that takes as input a vector of K real numbers, and normalizes it into a probability distribution consisting of K probabilities proportional to the exponentials of the input numbers"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y = tf.nn.softmax(tf.matmul(x, W) + b)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Define the loss cross entropy\n",
+    "> The `cross entropy` between two probability distributions `p` and `q` over the same underlying set of events measures the average number of bits needed to identify an event drawn from the set if a coding scheme used for the set is optimized for an estimated probability distribution `q`, rather than the true distribution `p`."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cross_entropy = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(labels=y_, logits=y))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Create Session and run minimizing cross entropy each training step in gradient descent"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_step = tf.train.GradientDescentOptimizer(0.5).minimize(cross_entropy)\n",
+    "\n",
+    "# Initialize globale variables\n",
+    "init = tf.global_variables_initializer()\n",
+    "\n",
+    "# Create interactive session that can span multiple code blocks\n",
+    "sess = tf.Session()\n",
+    "\n",
+    "sess.run(init)\n",
+    "\n",
+    "# Perform 1000 training steps\n",
+    "for i in range(1000):\n",
+    "    # Get 100 random data points, _xs = image, _ys = digit(0-9)\n",
+    "    batch_xs, batch_ys = mnist.train.next_batch(100)\n",
+    "    \n",
+    "    sess.run(train_step, feed_dict={x: batch_xs, y_: batch_ys})\n",
+    "    \n",
+    "# Evaluate how well the model predicted\n",
+    "correct_prediction = tf.equal(tf.argmax(y,1), tf.argmax(y_,1))\n",
+    "accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
+    "test_accuracy = sess.run(accuracy, feed_dict={x: mnist.test.images, y_: mnist.test.labels})\n",
+    "print(\"Test Accuracy: {0}%\".format(test_accuracy * 100.0))\n",
+    "\n",
+    "sess.close()"
+   ]
   }
  ],
  "metadata": {
