Deep MNIST neural network

--- a/simple-mnist-nn.ipynb
+++ b/simple-mnist-nn.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MNIST Neural Network"
+    "# Simple MNIST Neural Network"
    ]
   },
   {
@@ -21,7 +21,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Use the TF helper funtion to pull down the data from the MNIST site"
+    "1. Use the TF helper funtion to pull down the data from the MNIST site and define placeholders\n",
+    "> A `placeholder` is simply a variable that we will assign data to at a later date. It allows us to create our operations and build our computation graph, without needing the data. In TensorFlow terminology, we then feed data into the graph through these placeholders."
    ]
   },
   {
@@ -37,8 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- X is the placeholder for the 28x28 image data.\n",
-    "> A `placeholder` is simply a variable that we will assign data to at a later date. It allows us to create our operations and build our computation graph, without needing the data. In TensorFlow terminology, we then feed data into the graph through these placeholders."
+    "X is the placeholder for the 28x28 image data."
    ]
   },
   {
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- y_ is called 'y bar' and is a 10 element vector containing the predicted probablility of each digit(0-9) "
+    "y_ is called 'y bar' and is a 10 element vector containing the predicted probablility of each digit(0-9) "
    ]
   },
   {
@@ -63,14 +63,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_ = tf.placeholder(tf.float32, [None, 10])"
+    "y_ = tf.placeholder(tf.float32, shape=[None, 10])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Define weights and balances\n",
+    "2. Define weights and balances\n",
     "> A `variable` maintains state in the graph across calls to run(). You add a variable to the graph by constructing an instance of the class Variable"
    ]
   },
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Define the model\n",
+    "3. Define the model\n",
     "> The `softmax` function is a function that takes as input a vector of K real numbers, and normalizes it into a probability distribution consisting of K probabilities proportional to the exponentials of the input numbers"
    ]
   },
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Define the loss cross entropy\n",
+    "4. Define the loss cross entropy\n",
     "> The `cross entropy` between two probability distributions `p` and `q` over the same underlying set of events measures the average number of bits needed to identify an event drawn from the set if a coding scheme used for the set is optimized for an estimated probability distribution `q`, rather than the true distribution `p`."
    ]
   },
@@ -122,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Create Session and run minimizing cross entropy each training step in gradient descent"
+    "5. Create Session and run minimizing cross entropy each training step in gradient descent"
    ]
   },
   {
@@ -154,7 +154,9 @@
     "test_accuracy = sess.run(accuracy, feed_dict={x: mnist.test.images, y_: mnist.test.labels})\n",
     "print(\"Test Accuracy: {0}%\".format(test_accuracy * 100.0))\n",
     "\n",
-    "sess.close()"
+    "sess.close() \n",
+    "\n",
+    "# 90.7% Accuracy"
    ]
   }
  ],
